# esp32_hd

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  build_zip.sh  partitions.csv  sdkconfig
components/adafruit/: Adafruit_GFX.h
html/: index.html
main/: CMakeLists.txt  OLEDDisplayFonts.c  OLEDDisplayFonts.h  captdns.c  cgiupdate.c  cgiupdate.h  component.mk  config.c  config.h  ds.c  ds.h  hd_bmp180.c  hd_bmp180.h  hd_display.cpp  hd_http.c  hd_main.c  hd_main.h  hd_pzem.c  hd_spi_i2c.c  hd_spi_i2c.h  hd_wifi.c  hd_wifi.h  idf_component.yml  sh1106.c  sh1106.h
main/adafruit/: Adafruit_GFX.cpp  Adafruit_GFX.h  Adafruit_ILI9341.cpp  Adafruit_ILI9341.h  CMakeLists.txt
main/esp-request/: CMakeLists.txt  esp_request.c  uri_parser.c
main/esp-request/include/: esp_request.h
main/libesphttpd/: CMakeLists.txt  cgiflash.c  cgiwebsocket.c  component.mk  esp32_flash.c  httpd-freertos.c  httpd.c  httpdespfs.c
main/libesphttpd/core/: auth.c  base64.c  httpd-freertos.c  sha1.c
main/libesphttpd/include/: esp_platform.h  espmissingincludes.h  httpd.h  platform.h
main/libesphttpd/util/: esp32_flash.c
main/md5/: CMakeLists.txt  md5.h
